Add overlay for graphics

--- a/presentation.tex
+++ b/presentation.tex
@@ -134,11 +134,14 @@ We can show pictures or live performance.
 
 \subsection{Practical approach}
 
+
+
 \begin{frame}{Practical approach}
 
-\begin{figure}
-\includegraphics[width=9.5cm]{Figures/Workflow.png}
-\end{figure}
+\includegraphics<1>[scale=0.3]{Figures/Workflow/1.png}
+\includegraphics<2>[scale=0.3]{Figures/Workflow/2.png}
+\includegraphics<3>[scale=0.3]{Figures/Workflow/3.png}
+\includegraphics<4>[scale=0.3]{Figures/Workflow/4.png}
 
 \end{frame}
 
@@ -187,7 +190,15 @@ Compiler / Interpreter information
 \end{frame}
 
 \begin{frame}{SMT Solver}
-\includegraphics[width=9cm]{Figures/SMTsolver/SMTsolverCompete.png}
+
+\includegraphics<1>[width=9cm]{Figures/SMTsolver/1.png}
+\includegraphics<2>[width=9cm]{Figures/SMTsolver/2.png}
+\includegraphics<3>[width=9cm]{Figures/SMTsolver/3.png}
+\includegraphics<4>[width=9cm]{Figures/SMTsolver/4.png}
+\includegraphics<5>[width=9cm]{Figures/SMTsolver/5.png}
+\includegraphics<6>[width=9cm]{Figures/SMTsolver/6.png}
+\includegraphics<7>[width=9cm]{Figures/SMTsolver/7.png}
+
 \end{frame}
 
 \begin{frame}{SMT results}
@@ -232,13 +243,15 @@ Present fuzzing techniques
 Put eeeeeverything we think of. Ex:
 
 \begin{itemize}
-\item Generate 
 \item Create a fully automatic process
-\item Find automatic ways to generate exploits (using dictionary like attacks)
+\item \textbf{SMT approach}: Manage fonctions calls in main.c 
 \end{itemize}
 
 \end{frame}
 
+\begin{frame}{Future Work}
+\textit{Add a graph of automatic exploits using expert models}
+\end{frame}
 
 \begin{frame}{Thank you Questions ?}
 
