Add overlay for MORE graphics (Fuzzing)"

--- a/presentation.tex
+++ b/presentation.tex
@@ -166,7 +166,9 @@ Given the Infer information about bugs of a program A, create a program B that c
 P\LARGE roposed approaches
 \end{frame}
 
+\begin{frame}{Approaches overview}
 
+\end{frame}
 
 \subsection{Model checking}
 
@@ -209,15 +211,29 @@ Present the results we have and on which program. The performance review is NOT 
 
 \begin{frame}{Fuzzing technique}
 
-Present fuzzing techniques
+Present fuzzing background // add fuzzer logo
 
+\end{frame}
+
+\begin{frame}{Coverage-guided Greybox fuzzing}
+%\textit{Add graphic#1}
+\end{frame}
+
+\begin{frame}{Coverage-guided Greybox fuzzing}
+%\textit{Add graphic#2}
+\end{frame}
+
+\begin{frame}{Motivations}
+Explain intuiton for our problem
 \end{frame}
 
 \begin{frame}{Fuzzing technique}
 
-\begin{figure}
-\includegraphics[width=10cm]{Figures/Fuzzing.png}
-\end{figure}
+\includegraphics<1>[scale=0.3]{Figures/Fuzzing/1.png}
+\includegraphics<2>[scale=0.3]{Figures/Fuzzing/2.png}
+\includegraphics<3>[scale=0.3]{Figures/Fuzzing/3.png}
+\includegraphics<4>[scale=0.3]{Figures/Fuzzing/4.png}
+\includegraphics<5>[scale=0.3]{Figures/Fuzzing/5.png}
 
 \end{frame}
 
