Panic comit before

--- a/presentation.tex
+++ b/presentation.tex
@@ -96,8 +96,7 @@ Can we automatically turn static analysis reports into executable confirming the
 
 \subsection*{Section example}
 \begin{frame}{Section example}
-\textit{Give an example of main.c with a bug}
-We can show pictures or live performance. Ask the audience to detect the bug.
+\includegraphics[width=12cm]{Figures/main.c/mainTest.png}
 \end{frame}
 
 \subsection{Infer tool}
@@ -128,8 +127,7 @@ We can show pictures or live performance. Ask the audience to detect the bug.
 
 \begin{frame}{Infer tool example}
 
-\textit{Give an example of our use of Infer on main.c}
-We can show pictures or live performance.
+\includegraphics[width=12cm]{Figures/main.c/inferRunOnMain.png}
 \end{frame}
 
 \subsection{Practical approach}
@@ -211,16 +209,16 @@ Present the results we have and on which program. The performance review is NOT 
 
 \begin{frame}{Fuzzing technique}
 
-Present fuzzing background // add fuzzer logo
+\includegraphics[width=11.5cm]{Figures/Fuzzing/graph1.png}
 
 \end{frame}
 
 \begin{frame}{Coverage-guided Greybox fuzzing}
-%\textit{Add graphic#1}
+\includegraphics[width=11.5cm]{Figures/Fuzzing/graph2.png}
 \end{frame}
 
 \begin{frame}{Coverage-guided Greybox fuzzing}
-%\textit{Add graphic#2}
+\includegraphics[width=11.5cm]{Figures/Fuzzing/graph3.png}
 \end{frame}
 
 \begin{frame}{Motivations}
