commit before pull

--- a/presentation.tex
+++ b/presentation.tex
@@ -83,10 +83,6 @@ Problem Overview
 \item Are they weaknesses ?
 \end{itemize}
 
-\begin{figure}
-\includegraphics[width = 2cm]{Figures/HeartbleedLogo.png}
-\end{figure}
-
 \begin{block}{Formal challenge}
 Can we automatically turn static analysis reports into executable confirming the vulnerability of a program ?
 \end{block}
@@ -94,8 +90,8 @@ Can we automatically turn static analysis reports into executable confirming the
 
 \end{frame}
 
-\subsection*{Section example}
-\begin{frame}{Section example}
+\subsection*{Program bug example}
+\begin{frame}{Program bug example}
 \includegraphics[width=12cm]{Figures/main.c/mainTest.png}
 \end{frame}
 
@@ -164,9 +160,6 @@ Given the Infer information about bugs of a program A, create a program B that c
 P\LARGE roposed approaches
 \end{frame}
 
-\begin{frame}{Approaches overview}
-
-\end{frame}
 
 \subsection{Model checking}
 
@@ -249,7 +242,7 @@ Present the results we have and on which program. The performance review is NOT 
 \includegraphics[width=11.5cm]{Figures/Fuzzing/graph2.png}
 \end{frame}
 
-\begin{frame}{Coverage-guided Greybox fuzzing}
+\begin{frame}{Direct Greybox fuzzing}
 \includegraphics[width=11.5cm]{Figures/Fuzzing/graph3.png}
 \end{frame}
 
