--- a/presentation.tex
+++ b/presentation.tex
@@ -224,32 +224,30 @@ P\LARGE roposed approaches
 
 
 
-\subsection{SMT solvers}
 
-\begin{frame}{SMT solvers}
+\subsection{Symbolic approach : SMT }
+\begin{frame}{CFG and BFS}
+    \textit{Insert the graph}
+\end{frame}
 
-Present logic solvers
+\begin{frame}{Compiler}
+\textbf{SmallFoot} to \textbf{SMT-LIB2}
+\includegraphics[width=10cm]{Figures/SMTsolver/Image_PARSER_LEXER.png}
 
 \end{frame}
 
-\begin{frame}{SMT Solvers}
-Compiler / Interpreter information
+\begin{frame}{SMT solver}
+\includegraphics[width=10cm]{Figures/SMTsolver/SAT_SMTLIB.png}
 \end{frame}
 
-\begin{frame}{SMT Solver}
-
-\includegraphics<1>[width=9cm]{Figures/SMTsolver/1.png}
-\includegraphics<2>[width=9cm]{Figures/SMTsolver/2.png}
-\includegraphics<3>[width=9cm]{Figures/SMTsolver/3.png}
-\includegraphics<4>[width=9cm]{Figures/SMTsolver/4.png}
-\includegraphics<5>[width=9cm]{Figures/SMTsolver/5.png}
-\includegraphics<6>[width=9cm]{Figures/SMTsolver/6.png}
-\includegraphics<7>[width=9cm]{Figures/SMTsolver/7.png}
-
+\begin{frame}{Flowchart}
+\includegraphics[width=10cm]{Figures/SMTsolver/SMTsolverCompete.png}
 \end{frame}
 
-\begin{frame}{SMT results}
-Present the results we have and on which program. The performance review is NOT done here, but in Part 3/Result Comparison
+\begin{frame}{Data recombination}
+
+\includegraphics[width=10cm]{Figures/SMTsolver/Reports.png}
+
 \end{frame}
 
 \subsection{Fuzzing technique}
